# confidant

./: .gitignore  ARCHIVE_NOTICE.md  CLEANUP_GUIDE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  LICENSE  README.md  cleanup-caches.sh  config.example.yaml  package-lock.json  package.json  requirements-audio.txt  requirements-core.txt  requirements-ml.txt  requirements-optional.txt  requirements.txt  setup.py  test_queries.md
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
archive/: README.md
design/: confidant-symbol-path.json
desktop/: ACCESSIBILITY_AUDIT.md  BETA_DISTRIBUTION.md  BUNDLED_RESOURCES.md  BUNDLE_PYTHON.md  CROSS_COMPILATION.md  DEV_SETUP.md  FULL_INTEGRATION_SETUP.md  MIGRATION_STATUS.md  NEXT_STEPS.md  PHASE1_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE7_COMPLETE.md  PHASE7_TESTING.md  PYTHON_SETUP.md  README.md  ROUTING_AUDIT.md  ROUTING_REFACTOR_SUMMARY.md  SETUP_INSTRUCTIONS.md  STYLE_GUIDE.md  TESTING_CHECKLIST.md  VALIDATE_WORKFLOWS.md  index.html  package-lock.json  package.json  test_knowledge_base.json  vite.config.ts
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/resources/: .gitkeep  phonebook_seed.json
desktop/src-tauri/resources/scripts/: chromadb_helper.py  llama_helper.py
desktop/src-tauri/scripts/: chromadb_helper.py  embeddings_helper.py  llama_helper.py
desktop/src-tauri/src/: bundled_defaults.rs  cache.rs  embeddings.rs  llm.rs  main.rs  python_bundle.rs  user_management.rs  vector_store.rs
(+357 files in other folders)
