[package]
name = "dant-desktop"
version = "0.1.0"
description = "Privacy-first offline AI assistant for health consultation"
authors = ["dant contributors"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"

# LLM dependencies
# Note: llama-cpp-2 requires building llama.cpp from source
# For now, we'll use a subprocess approach or add it later
# llama-cpp-2 = "0.1"
# llama-cpp-sys-2 = "0.1"
lazy_static = "1.4"

# User management dependencies
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# ChromaDB client - will add Python integration later
# For now, we'll use subprocess to call Python ChromaDB

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
